--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "zlib": "npm:browserify-zlib"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3006 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
